# ray-tracer-rs

./: .gitignore  Cargo.toml  README.md
src/: camera.rs  color.rs  hittable.rs  interval.rs  lib.rs  main.rs  material.rs  ray.rs  sphere.rs  utils.rs  vec3.rs
src/examples/: example.rs  example_frost.rs  example_motion_blur.rs  example_normal.rs  example_performance.rs  example_perlin.rs  example_quads.rs  example_suzanne.rs  example_textures.rs  mod.rs
src/geometry/: hit_record.rs  hittable.rs  hittable_list.rs  mod.rs  quad.rs  sphere.rs  triangle_mesh.rs
src/geometry/accel/: aabb.rs  bvh.rs  mod.rs
src/materials/: dielectric.rs  lambertian.rs  material.rs  metal.rs  mod.rs  normal.rs
src/optics/: camera.rs  camera_config.rs  mod.rs  ray.rs
src/textures/: checker.rs  image.rs  mod.rs  perlin.rs  solid.rs  texture.rs
src/utils/: color.rs  interval.rs  mod.rs  perlin.rs  vec3.rs
src/worlds/: example.rs  example_frost.rs  example_motion_blur.rs  example_normal.rs  example_performance.rs  example_suzanne.rs  example_textures.rs  mod.rs
