[package]
name = "ray-tracer-rs"
version = "0.1.0"
edition = "2021"

[lib]
name = "lib"
path = "src/lib.rs"

[[bin]]
name = "ray-tracer-rs"
path = "src/main.rs"

[profile.release]
debug = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nalgebra = "*"
rand = "*"
rand_distr = "*"
image = "*"
tqdm = "*"